-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.32, 10.3.23, 10.4.13, 10.5.2
-
Component/s: Data Definition - Alter Table, Storage Engine - InnoDB
-
Labels:
May be related to MDEV-17814, though top of stack trace is very different, and that stack does not include row_rename_table_for_mysql
USE test;
|
CREATE TABLE t (a INT) ENGINE=INNODB;
|
ALTER TABLE t DISCARD TABLESPACE;
|
RENAME TABLE t TO t2;
|
Leads to:
Core was generated by `/data/git/MD180320-mariadb-10.5.2-linux-x86_64-opt/bin/mysqld --no-defaults --c'.
|
Program terminated with signal SIGSEGV, Segmentation fault.
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=11)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
57 ../sysdeps/unix/sysv/linux/pthread_kill.c: No such file or directory.
|
[Current thread is 1 (Thread 0x7f6f781e6700 (LWP 27610))]
|
(gdb) bt
|
#0 __pthread_kill (threadid=<optimized out>, signo=signo@entry=11)
|
at ../sysdeps/unix/sysv/linux/pthread_kill.c:57
|
#1 0x00005634c8393877 in my_write_core (sig=sig@entry=11) at /data/git/10.5_opt/mysys/stacktrace.c:518
|
#2 0x00005634c7d5215a in handle_fatal_signal (sig=11) at /data/git/10.5_opt/sql/signal_handler.cc:325
|
#3 <signal handler called>
|
#4 row_make_new_pathname (table=table@entry=0x7f6f49891300,
|
new_name=new_name@entry=0x7f6f781e3bf0 "test/t2")
|
at /data/git/10.5_opt/storage/innobase/row/row0merge.cc:4251
|
#5 0x00005634c814bbf7 in row_rename_table_for_mysql (old_name=old_name@entry=0x7f6f781e3df0 "test/t",
|
new_name=<optimized out>, new_name@entry=0x7f6f781e3bf0 "test/t2", trx=trx@entry=0x7f6f61c03218,
|
commit=commit@entry=true, use_fk=use_fk@entry=true)
|
at /data/git/10.5_opt/storage/innobase/row/row0mysql.cc:4326
|
#6 0x00005634c80796a3 in innobase_rename_table (use_fk=true, commit=true, to=0x7f6f781e4810 "./test/t2",
|
from=0x7f6f781e4600 "./test/t", trx=0x7f6f61c03218)
|
at /data/git/10.5_opt/storage/innobase/handler/ha_innodb.cc:13683
|
#7 ha_innobase::rename_table (this=<optimized out>, from=0x7f6f781e4600 "./test/t",
|
to=0x7f6f781e4810 "./test/t2") at /data/git/10.5_opt/storage/innobase/handler/ha_innodb.cc:13874
|
#8 0x00005634c7bece82 in mysql_rename_table (base=<optimized out>, old_db=old_db@entry=0x7f6f49847150,
|
old_name=old_name@entry=0x7f6f781e4ec0, new_db=new_db@entry=0x7f6f49847830,
|
new_name=new_name@entry=0x7f6f781e4ed0, flags=flags@entry=0)
|
at /data/git/10.5_opt/sql/sql_table.cc:5563
|
#9 0x00005634c7b7cab5 in do_rename (skip_error=false, new_table_alias=0x7f6f49847860,
|
new_table_name=0x7f6f49847840, new_db=0x7f6f49847830, ren_table=0x7f6f49847138, thd=0x7f6f49812018)
|
at /data/git/10.5_opt/sql/sql_rename.cc:301
|
#10 rename_tables (thd=thd@entry=0x7f6f49812018, table_list=table_list@entry=0x7f6f49847138,
|
skip_error=skip_error@entry=false) at /data/git/10.5_opt/sql/sql_rename.cc:384
|
#11 0x00005634c7b7ced5 in mysql_rename_tables (thd=thd@entry=0x7f6f49812018,
|
table_list=table_list@entry=0x7f6f49847138, silent=silent@entry=false)
|
at /data/git/10.5_opt/sql/sql_rename.cc:154
|
#12 0x00005634c7b5e946 in mysql_execute_command (thd=thd@entry=0x7f6f49812018)
|
at /data/git/10.5_opt/sql/sql_parse.cc:4275
|
#13 0x00005634c7b650bc in mysql_parse (thd=thd@entry=0x7f6f49812018, rawbuf=<optimized out>, length=20,
|
parser_state=parser_state@entry=0x7f6f781e54d0, is_com_multi=is_com_multi@entry=false,
|
is_next_command=is_next_command@entry=false) at /data/git/10.5_opt/sql/sql_parse.cc:7926
|
#14 0x00005634c7b5a049 in dispatch_command (command=command@entry=COM_QUERY,
|
thd=thd@entry=0x7f6f49812018, packet=packet@entry=0x7f6f4983a019 "RENAME TABLE t TO t2",
|
packet_length=packet_length@entry=20, is_com_multi=is_com_multi@entry=false,
|
is_next_command=is_next_command@entry=false) at /data/git/10.5_opt/sql/sql_parse.cc:1839
|
#15 0x00005634c7b583c0 in do_command (thd=0x7f6f49812018) at /data/git/10.5_opt/sql/sql_parse.cc:1358
|
#16 0x00005634c7c4c3ae in do_handle_one_connection (connect=<optimized out>,
|
connect@entry=0x7f6f754328f8, put_in_cache=put_in_cache@entry=true)
|
at /data/git/10.5_opt/sql/sql_connect.cc:1422
|
#17 0x00005634c7c4c554 in handle_one_connection (arg=arg@entry=0x7f6f754328f8)
|
at /data/git/10.5_opt/sql/sql_connect.cc:1319
|
#18 0x00005634c7fbb02a in pfs_spawn_thread (arg=0x7f6f7544b018)
|
at /data/git/10.5_opt/storage/perfschema/pfs.cc:2201
|
#19 0x00007f6f76c996db in start_thread (arg=0x7f6f781e6700) at pthread_create.c:463
|
#20 0x00007f6f7609788f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
In: MD 10.2.32 (dbg+opt), MD 10.3.23 (dbg+opt), MD 10.4.13 (dbg+opt), MD 10.5.2 (dbg+opt)
Not-in: MD 10.1.45 (dbt+opt), MS 5.5.62 (dbg+opt), MS 5.6.47 (dbg+opt), MS 8.0.19 (dbt+opt)
- relates to
-
MDEV-22939 Server crashes in row_make_new_pathname | ALTER TABLE ENGINE INNODB after DISCARD TABLESPACE
-
- Closed
-